Add comment highlighting
- Added an extension which shows comments in different colours depending on the type of comment.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "pkief.material-icon-theme",
-        "svelte.svelte-vscode"
+        "svelte.svelte-vscode",
+        "aaron-bond.better-comments"
     ]
 }
