--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^2.16.1",
 		"tailwindcss": "^3.4.8",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"zod": "^3.23.8"
 	},
 	"type": "module"
 }
