--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.427.0"
+		"lucide-svelte": "^0.427.0",
+		"pocketbase": "^0.21.4"
 	}
 }
